src/tui/overlay/wizard/snapshots/ghr_stats__tui__overlay__wizard__draw__tests__snapshot_org_input.snap
---
source: src/tui/overlay/wizard/draw.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Add org ─────────────────────────────────────┐                "
"                │                                              │                "
"                │  GitHub org login (or host/org): example-org │                "
"                │                                              │                "
"                │  [Enter] next · [Esc] cancel                 │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
