src/tui/overlay/wizard/snapshots/ghr_stats__tui__overlay__wizard__draw__tests__snapshot_pat_input_with_rejection.snap
---
source: src/tui/overlay/wizard.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Add PAT ─────────────────────────────────────┐                "
"                │  org  example-org                            │                "
"                │  Fine-grained PAT (github_pat_…):            │                "
"                │•••••••••••••••                               │                "
"                │  needs Self-hosted runners: Read  (+ Actions:│                "
"                │Read for job results)                         │                "
"                │  ✗ token lacks 'Self-hosted runners: Read' on│                "
"                │example-org                                   │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
