src/tui/overlay/wizard/snapshots/ghr_stats__tui__overlay__wizard__draw__tests__snapshot_pick_action.snap
---
source: src/tui/overlay/wizard.rs
expression: "render(&WizardMode::new())"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Configure ───────────────────────────────────┐                "
"                │                                              │                "
"                │  [a]  add / replace org + read-only PAT      │                "
"                │  [r]  remove org (drops its PAT)             │                "
"                │                                              │                "
"                │  [a] add/replace · [r] remove · [Esc] close  │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
