src/tui/overlay/wizard/snapshots/ghr_stats__tui__overlay__wizard__draw__tests__snapshot_remove_confirm.snap
---
source: src/tui/overlay/wizard.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Confirm remove ──────────────────────────────┐                "
"                │                                              │                "
"                │  Remove the read-only PAT for example-org and│                "
"                │forget the org?                               │                "
"                │                                              │                "
"                │  [y] remove · [n] cancel                     │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
