src/tui/overlay/wizard/snapshots/ghr_stats__tui__overlay__wizard__draw__tests__snapshot_remove_org_input.snap
---
source: src/tui/overlay/wizard.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Remove org ──────────────────────────────────┐                "
"                │                                              │                "
"                │  GitHub org login to remove: example-org     │                "
"                │                                              │                "
"                │  [Enter] next · [Esc] cancel                 │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
